<resources>
    <string name="app_name">WT Wiki</string>
    <string name="mland_original">Ships</string>
    <string name="mland_modified">Tanks</string>
    <string name="home">Planes / Jets</string>
    <string name="real_home">Home</string>
    <string name="about">About</string>

    <string name="anim_even_longer" translatable="false">5000</string>

    <string name="more_info">More info</string>

    <!-- Name of the easter egg. DO NOT TRANSLATE -->
    <string name="mland">Marshmallow Land</string>

    <string name="country_usa">USA</string>
    <string name="country_germany">Germany</string>
    <string name="country_ussr">USSR</string>
    <string name="country_britain">Britain</string>
    <string name="country_japan">Japan</string>
    <string name="country_china">China</string>
    <string name="country_italy">Italy</string>
    <string name="country_france">France</string>
    <string name="country_sweden">Sweden</string>
    <string name="country_israel">Israel</string>
    <string name="test">test</string>
    <string name="country_rank">Country Rank</string>
    <string name="description">Description</string>
    <string name="description_text">Description Text</string>
    <string name="test_two">test2</string>
    <string name="general_info">General Info</string>
    <string name="general_info_text">general info Text</string>
    <string name="country_caps">COUNTRY</string>
    <string name="country">Country</string>
    <string name="plane_name">Plane name</string>
    <string name="usage_in_battle">Usage in battle</string>
    <string name="usage_in_battle_text">Usage in battle text</string>

    <string-array name="items_name">
        <item>MacBook Pro</item>
        <item>Alienware</item>
        <item>Sony play station 4</item>
        <item>Xbox One</item>
        <item>Google glass</item>
        <item>Google Nexus 6</item>
    </string-array>

    <string-array name="item_description">
        <item>MacBook pro with new graphics and faster flash storage.</item>
        <item>High performance computer gaming system.</item>
        <item>PS4 console, the most immersive gaming experience ever.</item>
        <item>Best games, multi-player and entertainment.</item>
        <item>Optical head mounted display</item>
        <item>Motorolla Nexus x</item>
    </string-array>
</resources>
