<?xml version="1.0" encoding="utf-8"?><!--suppress DeprecatedClassUsageInspection -->
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:customfontdemo="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false">

    <LinearLayout
        android:id="@+id/main_contenttt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/off_white"
        android:orientation="vertical">

        <com.google.samples.apps.iosched.ui.widget.ObservableScrollView
            android:id="@+id/USAPlanesScrollview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/main_contenttt"
            android:overScrollMode="never"
            fresco:ignore="ObsoleteLayoutParam">

            <FrameLayout
                android:id="@+id/scroll_view_child"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    fresco:ignore="UselessParent">

                        <com.facebook.drawee.view.SimpleDraweeView
                            android:id="@+id/planeDrawee"
                            android:layout_width="fill_parent"
                            android:layout_height="235dp"
                            android:layout_gravity="top"
                            android:layout_marginTop="-24.0dip"
                            android:elevation="12.0dip"
                            fresco:actualImageScaleType="centerCrop"
                            fresco:placeholderImage="@drawable/bubbles" />

                    <com.kyler.mland.egg.ui.MLandTextView
                        android:id="@+id/planeName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/plane_name"
                        android:textColor="#10101c"
                        android:textSize="40sp"
                        customfontdemo:fontName="LyftPro-Bold.ttf" />

                    <com.facebook.drawee.view.SimpleDraweeView
                        android:id="@+id/countryImage"
                        android:layout_width="45dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        fresco:viewAspectRatio="1.33" />

                    <com.kyler.mland.egg.ui.MLandTextView
                        android:id="@+id/countryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="30dp"
                        android:text="@string/country"
                        android:textColor="#10101c"
                        android:textSize="16sp"
                        customfontdemo:fontName="symbols_skyquake.ttf"
                        fresco:ignore="RtlSymmetry" />

                    <com.kyler.mland.egg.ui.MLandTextView
                        android:id="@+id/countryRank"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/country_rank"
                        android:textColor="#10101c"
                        android:textSize="16sp"
                        customfontdemo:fontName="symbols_skyquake.ttf" />

                        <com.kyler.mland.egg.ui.MLandTextView
                            android:id="@+id/description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_marginTop="35dp"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:text="@string/description"
                            android:textColor="#30301c"
                            android:textSize="30sp"
                            customfontdemo:fontName="symbols_skyquake.ttf" />

                        <com.kyler.mland.egg.ui.MLandTextView
                            android:id="@+id/descriptionText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/description"
                            android:layout_marginTop="4dp"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:text="@string/description_text"
                            android:textColor="#30301c"
                            android:textSize="18sp"
                            customfontdemo:fontName="symbols_skyquake.ttf" />

                    <com.kyler.mland.egg.ui.MLandTextView
                        android:id="@+id/generalInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="12dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:text="@string/general_info"
                        android:textColor="#30301c"
                        android:textSize="30sp"
                        customfontdemo:fontName="symbols_skyquake.ttf" />

                    <com.kyler.mland.egg.ui.MLandTextView
                        android:id="@+id/generalInfoText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/generalInfo"
                        android:layout_marginTop="4dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:text="@string/general_info_text"
                        android:textColor="#10101c"
                        android:textSize="18sp"
                        customfontdemo:fontName="symbols_skyquake.ttf" />

                    <com.kyler.mland.egg.ui.MLandTextView
                        android:id="@+id/usageInBattles"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="12dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:text="@string/usage_in_battle"
                        android:textColor="#30301c"
                        android:textSize="30sp"
                        customfontdemo:fontName="symbols_skyquake.ttf" />

                    <com.kyler.mland.egg.ui.MLandTextView
                        android:id="@+id/usageInBattlesText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/generalInfo"
                        android:layout_marginTop="4dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:text="@string/usage_in_battle_text"
                        android:textColor="#10101c"
                        android:textSize="18sp"
                        customfontdemo:fontName="symbols_skyquake.ttf" />
                </LinearLayout>
            </FrameLayout>
        </com.google.samples.apps.iosched.ui.widget.ObservableScrollView>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/md_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="false">

        <ImageView
            android:id="@+id/circle_2"
            android:layout_width="36.0dip"
            android:layout_height="36.0dip"
            android:src="@drawable/circle"
            android:visibility="invisible"
            fresco:ignore="ContentDescription" />

        <include layout="@layout/toolbar_actionbar_transparent" />

    </RelativeLayout>

    <include layout="@layout/mland_base" />
</androidx.drawerlayout.widget.DrawerLayout>
